created CSS file and centered elements on webpage

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		<h1>Coming soon...</h1>
-		<img src="monkey.jpeg">
+		<div id="container">
+			<h1>Coming soon...</h1>
+			<img src="monkey.jpeg" id="logo">
+		</div>
 	</body>
 </html>
