--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<h1>Coming soon...</h1>
+			<h1>Ciao bufu vieni piano, ti amo</h1>
 			<img src="monkey.jpeg" id="logo">
 		</div>
 	</body>
